# cloud_secrets

./: .gitignore  Makefile  Readme.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot-pr-to-slack.yaml  dependabot-vulns-to-slack.yaml  python-package.yaml
cloud_secrets/: __init__.py  secret_manager.py
cloud_secrets/common/: exceptions.py
cloud_secrets/providers/: aws_provider.py  azure_provider.py  base.py  gcp_provider.py  local_provider.py
tests/: conftest.py  test_aws_provider.py  test_basic.py  test_cloud_providers.py  test_gcp_provider.py  test_set_delete.py
